<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="40dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
          >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="40dip"
            android:layout_height="fill_parent"
            android:background="#303F9F"
            tools:context="com.cfgb.cff.Activity2"
            android:orientation="vertical"
            android:weightSum="7">


            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:id="@+id/linearLayout"
                android:weightSum="1"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button"
                    android:text="@string/Prof"
                    android:color="#FFB624"

                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:background="#E57373"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"

                    android:layout_alignParentTop="true"
                    android:clickable="true" />
            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_below="@+id/linearLayout"
                android:id="@+id/linearLayout2"
                android:layout_weight="1">

                <Button

                    android:id="@+id/button2"
                    android:text="@string/jobs"
                    android:color="#FFB624"

                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:background="#4DB6AC"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                    android:layout_gravity="left"
                    android:allowUndo="true" />
            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_below="@+id/linearLayout2"
                android:id="@+id/linearLayout3"
                android:layout_weight="1">

                <Button
                    android:text="@string/tutorials"
                    android:color="#FFB624"

                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:background="#7986CB"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                    android:id="@+id/button3" />
            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_below="@+id/linearLayout3"
                android:id="@+id/linearLayout4"
                android:layout_weight="1">

                <Button
                    android:text="@string/jobs"
                    android:color="#FFB624"

                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:background="#9575CD"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                    android:id="@+id/button4"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_below="@+id/linearLayout4"
                android:id="@+id/linearLayout5"
                android:layout_weight="1">

                <Button
                    android:text="@string/settings"
                    android:color="#FFB624"

                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:background="#4DD0E1"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                    android:id="@+id/button5" />
            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_below="@+id/linearLayout5"

                android:id="@+id/linearLayout6"
                android:layout_weight="1">

                <Button
                    android:text="@string/coupons"
                    android:color="#FFB624"

                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:background="#FFD54F"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                    android:id="@+id/button6"
                    android:clickable="true" />
            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:layout_below="@+id/linearLayout6"
                android:layout_weight="1">

                <Button
                    android:text="@string/koffee"
                    android:color="#FFB624"

                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:background="#FF8A65"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                    android:id="@+id/button7"
                    android:singleLine="true" />
            </RelativeLayout>

        </LinearLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
